--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,24 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    integrationTestCompile.extendsFrom testCompile
+    integrationTestRuntime.extendsFrom testRuntime
+    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
+    integrationTestImplementation.extendsFrom testImplementation
+}
+
+sourceSets {
+    integrationTest {
+        java {
+            compileClasspath += main.output + test.output
+            runtimeClasspath += main.output + test.output
+            srcDir file('src/integration-test/java')
+        }
+        resources.srcDir file('src/integration-test/resources')
+    }
+}
+
 dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.9.1'
@@ -23,10 +41,14 @@ dependencies {
 
     compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
 
+
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.1'
     testCompile 'org.mockito:mockito-junit-jupiter:3.0.0'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.5.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
+
+    integrationTestImplementation 'org.junit.platform:junit-platform-launcher:1.5.1'
+    integrationTestCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
 }
 
 jar {
@@ -52,3 +74,19 @@ test {
         events 'PASSED', 'FAILED', 'SKIPPED'
     }
 }
+
+task integrationTest(type: Test) {
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
+    outputs.upToDateWhen { false }
+}
+
+integrationTest {
+    useJUnitPlatform()
+
+    testLogging {
+        events 'PASSED', 'FAILED', 'SKIPPED'
+    }
+}
+
+check.dependsOn(integrationTest)
