--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,15 @@ plugins {
     id 'java'
     id 'io.freefair.lombok' version '3.8.4'
     id 'application'
+    id 'jacoco'
+}
+
+jacocoTestReport {
+    reports {
+        xml.setEnabled(false)
+        csv.setEnabled(false)
+        html.destination file("${buildDir}/reports/jacoco")
+    }
 }
 
 group 'com.rsegeda'
@@ -25,8 +34,8 @@ configurations {
 sourceSets {
     integrationTest {
         java {
-            compileClasspath += main.output + test.output
-            runtimeClasspath += main.output + test.output
+            compileClasspath += main.output
+            runtimeClasspath += main.output
             srcDir file('src/integration-test/java')
         }
         resources.srcDir file('src/integration-test/resources')
@@ -38,6 +47,7 @@ dependencies {
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.9.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'com.google.inject', name: 'guice', version: '4.2.2'
+    compile group: 'org.everit.json', name: 'org.everit.json.schema', version: '1.5.1'
 
     compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
 
@@ -88,5 +98,3 @@ integrationTest {
         events 'PASSED', 'FAILED', 'SKIPPED'
     }
 }
-
-check.dependsOn(integrationTest)
